--- a/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
+++ b/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
@@ -13,13 +13,13 @@
         <!--My Account View Controller-->
         <scene sceneID="MSV-ZM-gMB">
             <objects>
-                <viewController id="gRl-OH-R4Y" customClass="MyAccountViewController" customModule="IssueTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyAccountViewController" id="gRl-OH-R4Y" customClass="MyAccountViewController" customModule="IssueTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="z1L-qp-bM9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTu-JO-ps0">
-                                <rect key="frame" x="107" y="707" width="200" height="50"/>
+                                <rect key="frame" x="107" y="677" width="200" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.95271917684188745" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="bFf-CO-vou"/>
@@ -63,7 +63,7 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5RF-2Y-ZTV">
-                                <rect key="frame" x="0.0" y="407.5" width="414" height="209.5"/>
+                                <rect key="frame" x="0.0" y="377.5" width="414" height="209.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorites" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vkx-tQ-gx4">
                                         <rect key="frame" x="25" y="0.0" width="289" height="33.5"/>
@@ -226,7 +226,7 @@
                             <constraint firstItem="bje-BS-27H" firstAttribute="top" secondItem="0sg-UR-ftg" secondAttribute="top" constant="15" id="Ja6-fC-F1u"/>
                             <constraint firstItem="eTu-JO-ps0" firstAttribute="centerX" secondItem="z1L-qp-bM9" secondAttribute="centerX" id="SPa-iH-qc1"/>
                             <constraint firstItem="0sg-UR-ftg" firstAttribute="trailing" secondItem="bje-BS-27H" secondAttribute="trailing" constant="25" id="Zlc-OX-RKQ"/>
-                            <constraint firstItem="5RF-2Y-ZTV" firstAttribute="top" secondItem="NO0-H1-TgL" secondAttribute="bottom" constant="120" id="azX-kx-lAu"/>
+                            <constraint firstItem="5RF-2Y-ZTV" firstAttribute="top" secondItem="NO0-H1-TgL" secondAttribute="bottom" constant="90" id="azX-kx-lAu"/>
                             <constraint firstItem="NO0-H1-TgL" firstAttribute="trailing" secondItem="0sg-UR-ftg" secondAttribute="trailing" id="hKz-GS-5ud"/>
                             <constraint firstItem="eTu-JO-ps0" firstAttribute="top" secondItem="5RF-2Y-ZTV" secondAttribute="bottom" constant="90" id="lCy-EX-xDy"/>
                             <constraint firstItem="0sg-UR-ftg" firstAttribute="trailing" secondItem="5RF-2Y-ZTV" secondAttribute="trailing" id="oW9-CA-b6f"/>
@@ -919,13 +919,13 @@
         <image name="archivebox" catalog="system" width="128" height="106"/>
         <image name="bell.badge" catalog="system" width="128" height="124"/>
         <image name="checkmark.circle" catalog="system" width="128" height="121"/>
+        <image name="chevron.down" catalog="system" width="128" height="72"/>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <image name="chevron.up" catalog="system" width="128" height="72"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="paperplane" catalog="system" width="128" height="118"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
-        <image name="chevron.down" catalog="system" width="128" height="72"/>
-        <image name="chevron.right" catalog="system" width="96" height="128"/>
-        <image name="chevron.up" catalog="system" width="128" height="72"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -938,17 +938,17 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
